--- a/package.json
+++ b/package.json
@@ -1,38 +1,35 @@
 {
   "name": "interview-forge",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "AI-powered interview simulator for full-stack developers",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext js,jsx"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@reduxjs/toolkit": "^2.9.0",
-    "antd": "^5.27.4",
+    "@google/generative-ai": "^0.21.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.21.2",
     "localforage": "^1.10.0",
-    "mammoth": "^1.11.0",
+    "mammoth": "^1.8.0",
     "moment": "^2.30.1",
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "^4.7.76",
     "prop-types": "^15.8.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^7.9.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "vite": "^5.4.9"
   }
 }
