Name changed to Crisp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interview-forge",
+  "name": "crisp",
   "version": "1.0.0",
   "type": "module",
   "description": "AI-powered interview simulator for full-stack developers",
